# system-monitor

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  config.example.yaml  docker-compose.ci.yml  docker-compose.prod.yml  run.sh
.github/workflows/: cpp-ci.yml
src/: CMakeLists.txt  Config.cpp  Config.h  CpuSensor.cpp  CpuSensor.h  RamSensor.h  SystemMonitor.cpp  SystemMonitor.h  main.cpp
src/core/: Config.cpp  Config.h  Logger.cpp  Logger.h  SystemMonitor.cpp  SystemMonitor.h  config.cpp  config.h  logger.cpp  logger.h  system_monitor.cpp  system_monitor.h
src/sensors/: CpuSensor.cpp  CpuSensor.h  DiskSensor.cpp  DiskSensor.h  RamSensor.cpp  RamSensor.h  Sensor.cpp  Sensor.h  cpu_sensor.cpp  cpu_sensor.h  disk_sensor.cpp  disk_sensor.h  ram_sensor.cpp  ram_sensor.h  sensor.cpp  sensor.h
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_logger.cpp
